feat: header, offcanvas, pagina de instalacion uno

--- a/assets/css/_variables.css
+++ b/assets/css/_variables.css
@@ -1,5 +1,5 @@
 :root {
-    --main-bg-color: #F5F7FD;
+    --bs-body-bg: #F5F7FD;
     --white: #FFFFFF;
     --btn-primary-color: #233D9B;
     --btn-primary-color-hover: #142A79;
