--- a/assets/css/_main.css
+++ b/assets/css/_main.css
@@ -1,4 +1,10 @@
 body {
-    background-color: var(--main-bg-color);
-    color: var(--text-main-color);
+  background-color: var(--bs-body-bg);
+  color: var(--text-main-color);
+}
+
+.container,
+.row > * {
+  padding-right: 1rem;
+  padding-left: 1rem;
 }
