--- a/views/install/1-install.html
+++ b/views/install/1-install.html
@@ -14,14 +14,14 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
       rel="stylesheet"
     />
-    <link href="../assets/css/styles.css" rel="stylesheet" />
+    <link href="../../assets/css/styles.css" rel="stylesheet" />
   </head>
   <body>
     <header>
       <nav class="navbar">
         <div class="container">
           <a class="navbar-brand" href="#">
-            <img src="../img/logo.svg" alt="Ozer.bot" />
+            <img src="../../img/logo.svg" alt="Ozer.bot" />
           </a>
           <button
             class="navbar-toggler d-lg-none"
@@ -122,7 +122,7 @@
         <div class="row install-section">
           <div class="col-12 col-lg-6 install-section__item">
             <div class="section-qr">
-              <img src="../img/qr_code.svg" alt="Código QR" />
+              <img src="../../img/qr_code.svg" alt="Código QR" />
             </div>
             <div class="section-authcode">
               <form action="">
@@ -142,7 +142,7 @@
           </div>
           <div class="col-12 col-lg-6 install-section__item">
             <div class="nav-sections mb-4">
-              <img src="../img/android-51.svg" alt="Android" />
+              <img src="../../img/android-51.svg" alt="Android" />
               <p class="fw-bold my-2">Instrucciones para teléfonos Android</p>
               <ol>
                 <li>Abrir WhatsApp</li>
@@ -157,7 +157,7 @@
               </ol>
             </div>
             <div class="nav-sections">
-              <img src="../img/iOS.svg" alt="iOS" />
+              <img src="../../img/iOS.svg" alt="iOS" />
               <p class="fw-bold my-2">Instrucciones para teléfonos Android</p>
               <ol>
                 <li>Abrir WhatsApp</li>
