--- a/assets/css/_main.css
+++ b/assets/css/_main.css
@@ -1,10 +1,21 @@
 body {
   background-color: var(--bs-body-bg);
   color: var(--text-main-color);
+  font-family: var(--font-family);
+  font-size: var(--font-size-body-1);
+  line-height: var(--line-height-body-1);
 }
 
 .container,
 .row > * {
   padding-right: 1rem;
   padding-left: 1rem;
+}
+
+@media (min-width: 992px) {
+  .main-container {
+    max-width: 1024px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
