--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,8 @@
 @import '_variables.css';
+@import '_typography.css';
 @import '_main.css';
 @import '_button.css';
 @import '_header.css';
 @import '_install.css';
 @import '_install-success.css';
+@import '_sections.css';
