--- a/views/install/3-install-success.html
+++ b/views/install/3-install-success.html
@@ -8,6 +8,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet"
+  />
   <link href="../../assets/css/styles.css" rel="stylesheet" />
 </head>
 
@@ -83,7 +89,7 @@
     <section class="container">
       <div class="row">
         <div class="col-12 nav-sections mb-4">
-          <h3>🎉🎉🎉 ¡Felicidades, has conectado Ozer a WhatsApp!</h3>
+          <h1 class="h3">🎉🎉🎉 ¡Felicidades, has conectado Ozer a WhatsApp!</h1>
           <p>¡Ya puedes probarlo! Pidele a un amigo o contacto que te envíe un mensaje de voz para recibir tu primer
             transcripción</p>
           <button type="button" class="btn btn-lg btn-primary">
@@ -92,40 +98,44 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-12 col-lg-6 nav-sections mb-4">
-          <h4 class="my-2">¿Cómo funciona Ozer?</h4>
+        <div class="col-12 col-lg-6 nav-sections mb-4 text-secondary">
+          <h2 class="my-2 h4">¿Cómo funciona Ozer?</h2>
           <ul class="ul-list-ozer">
             <li class="li-list-ozer">
               <span class="material-symbols-outlined  me-2">
                 person
               </span>
-              Los mensajes de contactos se van a transcribir en el mismo chat
+              <span>Los <strong>mensajes de contactos</strong> se van a transcribir en el mismo chat</span>
             </li>
             <li class="li-list-ozer">
               <span class="material-symbols-outlined  me-2">
                 groups
               </span>
-              Los mensajes de grupos por el momento no se van a transcribir
+              <span>Los <strong>mensajes de grupos</strong> por el momento no se van a transcribir</span>
             </li>
           </ul>
           <button type="button" class="btn btn-lg btn-outline-primary">
             Cambiar configuración
           </button>
         </div>
-        <div class="col-12 col-lg-6 nav-sections">
-          <h4 class="my-2">¿Cómo funciona Ozer?</h4>
+        <div class="col-12 col-lg-6 nav-sections text-secondary">
+          <h2 class="my-2 h4">¿Cómo funciona Ozer?</h2>
           <ul class="ul-list-ozer">
             <li class="li-list-ozer">
               <span class="material-symbols-outlined me-2">
                 keyboard_command_key
               </span>
-              Escribe “ozer off” en el chat de un contacto o grupo para apagar las transcripciones
+              <span>
+                Escribe “<strong>ozer off</strong>” en el chat de un contacto o grupo para apagar las transcripciones
+              </span>
             </li>
             <li class="li-list-ozer">
               <span class="material-symbols-outlined  me-2">
                 keyboard_command_key
               </span>
-              Escribe “ozer off” en el chat de un contacto o grupo para apagar las transcripciones
+              <span>
+                Escribe “<strong>ozer off</strong>” en el chat de un contacto o grupo para apagar las transcripciones
+              </span>
             </li>
           </ul>
           <button type="button" class="btn btn-lg btn-outline-primary">
