--- a/assets/css/_main.css
+++ b/assets/css/_main.css
@@ -19,3 +19,19 @@ body {
     margin-right: auto;
   }
 }
+
+.size-20 {
+  font-size: 20px;
+  width: 20px;
+  height: 20px;
+}
+.border-none {
+  border: none;
+}
+.outline-none {
+  outline: none !important;
+}
+
+.modal {
+  --bs-modal-width: 544px;
+}
