--- a/assets/css/_variables.css
+++ b/assets/css/_variables.css
@@ -10,6 +10,8 @@
     --text-secondary-color: #464951;
     --border-primary-color: #DCDDE0;
 
+    --nav-item-bg: #E0E4F3;
+
     --success-bg-color: #408559;
     --success-secondary-bg-color: #D6E6DE;
     --success-border-color: #ACCEBC;
