--- a/assets/css/_main.css
+++ b/assets/css/_main.css
@@ -4,6 +4,7 @@ body {
   font-family: var(--font-family);
   font-size: var(--font-size-body-1);
   line-height: var(--line-height-body-1);
+  letter-spacing: -0.176px;
 }
 
 .container,
@@ -17,6 +18,15 @@ body {
     max-width: 1024px;
     margin-left: auto;
     margin-right: auto;
+  }
+  .rounded-lg-4 {
+    border-radius: 1.5rem !important;
+  }
+  .w-lg-auto {
+    width: auto !important;
+  }
+  .w-lg-max {
+    width: max-content !important;
   }
 }
 
@@ -34,4 +44,11 @@ body {
 
 .modal {
   --bs-modal-width: 544px;
+}
+
+@media (max-width: 992px) {
+  .padding-x-sm-none {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
