fix: alert success

--- a/views/sections/5-config-pause-alert.html
+++ b/views/sections/5-config-pause-alert.html
@@ -254,7 +254,7 @@
                 <hr class="nav-sections__divisor custom-margin mb-0" />
               </div>
 
-              <!-- Formulario -->
+              <!-- Formulario - Radio -->
               <form class="body-2">
                 <div class="form-bg">
                   <p class="fw-bold mb-2">
@@ -342,6 +342,7 @@
                       type="checkbox"
                       name="flexRadioDefault"
                       id="flexCheckboxDefault1"
+                      checked
                     />
                     <label class="form-check-label" for="flexCheckboxDefault1">
                       Transcribir mis mensajes de voz
@@ -350,6 +351,33 @@
                 </div>
 
                 <div class="form-footer">
+                  <!-- Alerta éxito -->
+                  <div class="alert-success-box alert-dismissible fade show">
+                    <div class="alert alert-success alert-outline" role="alert">
+                      <span
+                        class="material-symbols-outlined"
+                        aria-hidden="true"
+                      >
+                        check_circle
+                      </span>
+                      <span>Transcripciones activadas</span>
+                      <button
+                        type="button"
+                        class="btn-close"
+                        data-bs-dismiss="alert"
+                        aria-label="Cerrar"
+                      >
+                        <span
+                          class="material-symbols-outlined"
+                          aria-hidden="true"
+                        >
+                          close
+                        </span>
+                      </button>
+                    </div>
+                  </div>
+                  <!-- Alerta éxito Fin -->
+
                   <div class="box-btn-bg">
                     <div class="py-3 pb-lg-0 d-flex box-btn-mobile">
                       <button
@@ -362,7 +390,7 @@
                   </div>
                 </div>
               </form>
-              <!-- Formulario Fin-->
+              <!-- Formulario - Radio Fin-->
             </div>
           </div>
         </div>
