--- a/assets/css/_config.css
+++ b/assets/css/_config.css
@@ -1,3 +1,20 @@
+.config-header,
+.form-bg {
+  background-color: white;
+  padding: 1.5rem 1rem 0;
+}
+.form-bg {
+  padding-bottom: 0.25rem;
+}
+@media (min-width: 992px) {
+  .config-header {
+    border-radius: 1.5rem 1.5rem 0 0;
+    padding: 1.5rem 1.5rem 0;
+  }
+  .form-bg {
+    padding: 1.5rem 1.5rem 0;
+  }
+}
 .nav-custom {
   display: flex;
   justify-content: space-between;
@@ -48,10 +65,43 @@
 
 @media (max-width: 992px) {
   .box-btn-mobile {
+    background-color: var(--white);
     border-top: 1px solid var(--border-primary-color);
     border-radius: 1.5rem;
     padding: 1rem;
-    margin-left: -1.5rem;
-    margin-right: -1.5rem;
+  }
+  .alert-success-box {
+    background-color: var(--bs-body-bg);
+    margin-right: 1rem;
+    padding-right: 0;
+    width: 100%;
+  }
+  .alert-success-box .alert-success.alert-outline.alert-success {
+    margin: 1rem;
+    margin-top: 0.25rem;
+    width: auto;
+  }
+  .box-btn-bg {
+    background-color: var(--white);
+  }
+  .alert-success-box:has(.alert-success.alert-outline.alert-success)
+    + .box-btn-bg {
+    background-color: var(--bs-body-bg);
+  }
+}
+@media (min-width: 992px) {
+  .form-footer {
+    border-radius: 0 0 1.5rem 1.5rem;
+    margin-top: 0;
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .box-btn-bg {
+    background-color: white;
+    padding: 0 1.5rem 1.5rem;
+    border-radius: 0 0 1.5rem 1.5rem;
+  }
+  .alert-success-box {
+    padding-top: 1.5rem;
   }
 }
