--- a/views/sections/5-config-pause-alert.html
+++ b/views/sections/5-config-pause-alert.html
@@ -147,7 +147,7 @@
         </div>
       </nav>
     </header>
-    <main class="main-container">
+    <main class="main-container position-relative">
       <section class="container my-4">
         <a
           href="#"
@@ -220,40 +220,9 @@
           <div class="col-12 col-lg-8 install-section__item mb-lg-3">
             <div class="pb-0 rounded-0 rounded-lg-4">
               <div class="config-header">
-                <h1 class="mb-3 h4">Configuración general</h1>
-                <!-- Alerta -->
-                <div
-                  class="alert alert-info d-flex align-items-top gap-2"
-                  role="alert"
-                >
-                  <span
-                    class="material-symbols-outlined text-info"
-                    aria-hidden="true"
-                  >
-                    info
-                  </span>
-                  <div class="d-lg-flex justify-content-between gap-2">
-                    <p class="text-danger body-2 mb-lg-0 mt-sm-1 mt-lg-0">
-                      <span>Se han pausado todas las transcripciones. </span>
-                      <span class="d-lg-block"
-                        >Actívalas si quieres volver a recibirlas en tus
-                        chats</span
-                      >
-                    </p>
-                    <div>
-                      <button
-                        type="button"
-                        class="btn btn-outline-primary w-lg-max p-2"
-                      >
-                        <span class="body-2">Activar transcripciones</span>
-                      </button>
-                    </div>
-                  </div>
-                </div>
-                <!-- Alerta Fin-->
+                <h1 class="mb-4 h4">Configuración general</h1>
                 <hr class="nav-sections__divisor custom-margin mb-0" />
               </div>
-
               <!-- Formulario - Radio -->
               <form class="body-2">
                 <div class="form-bg">
@@ -336,7 +305,7 @@
                     Al habilitar esta configuración, también se transcribirán
                     los mensajes de voz que envíes a tus contactos
                   </p>
-                  <div class="form-check">
+                  <div class="form-check pb-2">
                     <input
                       class="form-check-input"
                       type="checkbox"
@@ -352,41 +321,36 @@
 
                 <div class="form-footer">
                   <!-- Alerta éxito -->
-                  <div class="alert-success-box alert-dismissible fade show">
-                    <div class="alert alert-success alert-outline" role="alert">
+                  <div
+                    class="alert alert-success alert-outline alert-dismissible fade show"
+                    role="alert"
+                  >
+                    <span class="material-symbols-outlined" aria-hidden="true">
+                      check_circle
+                    </span>
+                    <span>Transcripciones activadas</span>
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="alert"
+                      aria-label="Cerrar"
+                    >
                       <span
                         class="material-symbols-outlined"
                         aria-hidden="true"
                       >
-                        check_circle
+                        close
                       </span>
-                      <span>Transcripciones activadas</span>
-                      <button
-                        type="button"
-                        class="btn-close"
-                        data-bs-dismiss="alert"
-                        aria-label="Cerrar"
-                      >
-                        <span
-                          class="material-symbols-outlined"
-                          aria-hidden="true"
-                        >
-                          close
-                        </span>
-                      </button>
-                    </div>
+                    </button>
                   </div>
                   <!-- Alerta éxito Fin -->
-
-                  <div class="box-btn-bg">
-                    <div class="py-3 pb-lg-0 d-flex box-btn-mobile">
-                      <button
-                        type="button"
-                        class="btn btn-primary btn-lg w-100 w-lg-auto ms-lg-auto"
-                      >
-                        Guardar cambios
-                      </button>
-                    </div>
+                  <div class="py-3 pb-lg-0 d-flex box-btn-mobile">
+                    <button
+                      type="button"
+                      class="btn btn-primary btn-lg w-100 w-lg-auto ms-lg-auto"
+                    >
+                      Guardar cambios
+                    </button>
                   </div>
                 </div>
               </form>
