fix: se reemplaza alerta de exito por toast

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,6 +3,7 @@
 @import '_main.css';
 @import '_button.css';
 @import '_alert.css';
+@import '_toast.css';
 @import '_header.css';
 @import '_install.css';
 @import '_install-success.css';
