--- a/assets/css/_config.css
+++ b/assets/css/_config.css
@@ -63,22 +63,18 @@
 }
 @media (max-width: 992px) {
   .form-footer {
-    margin-bottom: 104px;
+    margin-bottom: 90px;
   }
   .form-footer .box-btn-mobile {
     background-color: var(--white);
     border-top: 1px solid rgba(35, 61, 155, 0.1);
     border-radius: 1.5rem 1.5rem 0 0;
     padding: 1rem;
-    margin-top: 2rem;
+    margin-top: 0;
     position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
-  }
-  .form-footer .alert-success.alert-outline.alert-success {
-    width: auto;
-    margin: 0.25rem 1rem 0;
   }
 }
 @media (min-width: 992px) {
@@ -92,7 +88,7 @@
     background-color: var(--white);
     padding: 0 1.5rem 1.5rem;
     border-radius: 0 0 1.5rem 1.5rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
   }
   .form-footer .box-btn-mobile .btn {
     margin-bottom: 1.5rem;
