--- a/views/sections/5-config-pause-alert.html
+++ b/views/sections/5-config-pause-alert.html
@@ -320,34 +320,49 @@
                 </div>
 
                 <div class="form-footer">
-                  <!-- Alerta éxito -->
-                  <div
-                    class="alert alert-success alert-outline alert-dismissible fade show"
-                    role="alert"
-                  >
-                    <span class="material-symbols-outlined" aria-hidden="true">
-                      check_circle
-                    </span>
-                    <span>Transcripciones activadas</span>
-                    <button
-                      type="button"
-                      class="btn-close"
-                      data-bs-dismiss="alert"
-                      aria-label="Cerrar"
-                    >
-                      <span
-                        class="material-symbols-outlined"
-                        aria-hidden="true"
+                  <!-- Toast éxito -->
+                  <div class="position-relative">
+                    <div class="toast-container active-transcript-toast">
+                      <div
+                        id="activeTrancriptionsToast"
+                        class="toast"
+                        role="alert"
+                        aria-live="assertive"
+                        aria-atomic="true"
                       >
-                        close
-                      </span>
-                    </button>
+                        <div class="toast-content">
+                          <span
+                            class="material-symbols-outlined"
+                            aria-hidden="true"
+                          >
+                            check_circle
+                          </span>
+                          <span class="toast-content__text"
+                            >Transcripciones activadas</span
+                          >
+                          <button
+                            type="button"
+                            class="btn-close"
+                            data-bs-dismiss="toast"
+                            aria-label="Cerrar"
+                          >
+                            <span
+                              class="material-symbols-outlined"
+                              aria-hidden="true"
+                            >
+                              close
+                            </span>
+                          </button>
+                        </div>
+                      </div>
+                    </div>
                   </div>
-                  <!-- Alerta éxito Fin -->
+                  <!-- Toast éxito Fin -->
                   <div class="py-3 pb-lg-0 d-flex box-btn-mobile">
                     <button
                       type="button"
                       class="btn btn-primary btn-lg w-100 w-lg-auto ms-lg-auto"
+                      id="activeTrancriptionsToastBtn"
                     >
                       Guardar cambios
                     </button>
@@ -371,5 +386,28 @@
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Toast script -->
+    <script>
+      const activeTrancriptionsToastTrigger = document.getElementById(
+        "activeTrancriptionsToastBtn"
+      );
+      const activeTrancriptionsToast = document.getElementById(
+        "activeTrancriptionsToast"
+      );
+
+      if (activeTrancriptionsToastTrigger) {
+        const toastBootstrap = bootstrap.Toast.getOrCreateInstance(
+          activeTrancriptionsToast
+        );
+        activeTrancriptionsToastTrigger.addEventListener("click", () => {
+          toastBootstrap.show();
+          window.scrollTo({
+            top: document.body.scrollHeight,
+            behavior: "smooth",
+          });
+        });
+      }
+    </script>
   </body>
 </html>
