--- a/views/contacts/2-add.html
+++ b/views/contacts/2-add.html
@@ -166,7 +166,7 @@
                   Transcribir en el mismo chat
                 </p>
               </div>
-              <div class="">
+              <div>
                 <button type="button" class="btn btn-lg btn-primary" data-bs-toggle="offcanvas"
                   data-bs-target="#offcanvasContacts" aria-controls="offcanvasContacts">
                   Agregar contacto
@@ -200,7 +200,7 @@
             </div>
             <!-- Contenido fin -->
             <!-- Offcanvas Contacts -->
-            <!-- <div class="offcanvas offcanvas-end offcanvas-contacts" tabindex="-1" id="offcanvasContacts"
+            <div class="offcanvas offcanvas-end offcanvas-contacts" tabindex="-1" id="offcanvasContacts"
               aria-labelledby="offcanvasContactsLabel">
               <div class="offcanvas-header">
                 <h5 class="offcanvas-title h5" id="offcanvasContactsLabel">
@@ -209,26 +209,55 @@
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
               </div>
               <div class="offcanvas-body">
-                <div>
-                  Some text as placeholder. In real life you can have the
-                  elements you have chosen. Like, text, images, lists, etc.
+                <div class="mb-3 pb-3">
+                  <label for="name-contact" class="form-label">Nombre del contacto *</label>
+                  <input type="text" class="form-control" id="name-contact" placeholder="Ingresa el nombre de contacto">
                 </div>
-                <div class="dropdown mt-3">
-                  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
-                    Dropdown button
-                  </button>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li>
-                      <a class="dropdown-item" href="#">Another action</a>
-                    </li>
-                    <li>
-                      <a class="dropdown-item" href="#">Something else here</a>
-                    </li>
-                  </ul>
+                <div class="mt-3">
+                  <p class="mb-2">
+                    Modo de transcripción para contactos
+                  </p>
+                  <div class="form-check">
+                    <input
+                      class="form-check-input"
+                      type="radio"
+                      name="flexRadio"
+                      id="flexRadio1"
+                      checked
+                    />
+                    <label class="form-check-label" for="flexRadio1">
+                      Transcribir en el mismo chat
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input
+                      class="form-check-input"
+                      type="radio"
+                      name="flexRadio"
+                      id="flexRadio2"
+                    />
+                    <label class="form-check-label" for="flexRadio2">
+                      Transcribir en mi chat privado
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input
+                      class="form-check-input"
+                      type="radio"
+                      name="flexRadio"
+                      id="flexRadio3"
+                    />
+                    <label class="form-check-label" for="flexRadio3">
+                      No transcribir
+                    </label>
                 </div>
               </div>
-            </div> -->
+              <div class="d-flex justify-content-end">
+                <button type="button" class="btn btn-lg btn-primary" data-bs-toggle="offcanvas"
+                  data-bs-target="#offcanvasContacts" aria-controls="offcanvasContacts">
+                  Agregar contacto
+                </button> 
+            </div>
           </div>
         </div>
       </div>
